--- a/main.css
+++ b/main.css
@@ -52,6 +52,10 @@ input[type=email]:focus{
     width: 100%;
 }
 
+label{
+    margin-right: 15px;
+}
+
 #form-submit{
     background-color: black;
     color: white;
